@@ -1,5 +1,6 @@
 2.4.104 -> 2.4.105:
 	- added langpath: to rpmrc, and mark files with matches
+	- added some C++ cruft to rpmlib.h
 
 2.4.103 -> 2.4.104:
 	- fixed popt/Makefile.in to use CPP from configure
